feat: categories endpoint
